# cosc525_m7_final_project

./: .gitignore  .python-version  model_1_24x24_notebook_v2.ipynb  model_1_notebook.ipynb  model_1_notebook_with_24x24.ipynb  model_2_24x24_notebook_v2.ipynb  model_2_notebook.ipynb  model_3_24x24_notebook_v2.ipynb  preprocessing.ipynb  pyproject.toml
constants/: klass_mappings.py  transliterations.py
data/: data_manager.py
models/: model_1.py  model_2.py  model_3.py  model_manager.py
models/snapshots/: model_2_24x24.keras
