[tool.poetry]
name = "persian-character-recognition"
version = "0.1.0"
description = ""
authors = ["bfinlayson-utk <bfinlayson@hbu.co>"]
readme = "README.md"
packages = [{include = "persian_character_recognition", from = "src"}]

[tool.poetry.dependencies]
python = ">3.9"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
tensorflow = "^2.16.1"
jupyter = "^1.0.0"
scikit-learn = "^1.4.2"
keras-tuner = "^1.4.7"
pydot = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
